# pymgrs

./: .gitignore  LICENSE  README.md  mgrs.py  pyproject.toml
